mule-user-guide/v/3.3/4-applying-load-to-the-cluster.adoc
= 将加载应用于群集

通过在Mule集群上运行的功能性应用程序，我们可以向应用程序发送调用以应用加载并查看集群工作来管理它。使用*WidgetUI* Web应用程序向*cluster-demo-app*发送呼叫，然后见证群集的活动。

. 打开浏览器的新标签页或窗口，然后转到`+http://localhost:8080/widgetUI+`。请注意，在启动时，由于cluster-demo-app尚未处理任何请求，因此没有任何窗格包含数据。
+
*  *Application Flows*窗格显示cluster-demo-app中四个流的图形视图：
**  `Input`
**  `ShapeService`
**  `ColorService`
**  `IdentificationService`
+
*  *Throughout*窗格显示Mule群集每秒处理的消息的平均数量。 *Throughout*窗格不会显示`Input`流的数据，因为它不处理消息;它只将消息从JMS队列移动到VM队列。
+
*  *Amount of flows executed by server*窗格显示集群中每台服务器完成处理应用程序中四个流之一的次数。
+
*  *Flow Analysis*窗格显示一台服务器上的消息数量（本例中为小部件），集群演示应用程序进程数以及应用程序在集群中多台服务器上处理的消息数。
+
*  *Time to Complete Processing of Widget*窗格显示：
**  Mule群集在群集演示应用中通过*All Flows*处理小部件所需的平均时间
**  Mule使用*only one server*处理一个小部件所需的平均时间。
**  Mule在群集中使用*more than one server*处理一个小部件所需的平均时间。
+
. 在*Control Panel*中，在标记为*Number of widgets to send*的字段中输入一个介于50和100之间的数字，以指示Web应用程序应将"widgets"发送给{{4 }}。
. 按*Enter*，或者点击*>*按钮向应用程序发送呼叫。
+
[quote]
____________________________________________________________________________
集群演示应用程序开始处理Mule服务器集群上的小部件。 WidgetUI上的窗格动态显示关于Mule集群如何处理流中的消息的数据。当cluster-demo-app完成请求（即处理所有小部件）时，窗格的信息将变为静态。
____________________________________________________________________________

. 在WidgetUI中，单击*Reset All*重置用户界面中的统计信息。 （重置不会删除Web应用程序发送到群集演示应用程序的所有消息，它只会重置Web应用程序上的统计信息。）

. 重复步骤2  -  3，向cluster-demo-app发送更多呼叫以处理不同数量的小部件。

== 分析数据

以下详细描述了作为处理50个窗口小部件的请求的结果，集群的活动。

=== 吞吐量

显示Mule群集每秒处理的消息的平均数量，*Throughput*窗格指示：

{} *  Mule通过cluster-demo-app中的所有四个流，每秒平均处理9.93条消息（即小部件）
*  `ShapeService`，`ColorService`和`IdentificationService`个流分别平均每秒处理10.25，8.78，7.17个消息
+
深蓝色条表示平均吞吐量;浅蓝色条显示瞬时吞吐量。

=== 服务器执行的流量

此窗格演示了Mule如何平衡集群中服务器之间的处理负载。数据表明：

*  `server 1`执行了73个流程
*  `server 2`执行了77个流程

该窗格说明Mule如何在服务之间来回传递消息以完成处理。该图表显示每台服务器处理的流量大致相同，说明Mule有效平衡节点间负载的能力。

=== 流量分析

该窗格说明Mule在集群中多次使用多台服务器来处理消息的频率。数据表明：

*  Mule仅使用集群中的一台服务器处理10条消息
*  Mule使用集群中的两台服务器处理40条消息

群集上运行的集群演示应用有利于多节点消息处理，以便更好地演示节点之间的负载均衡

=== 完成Widget处理的时间

*Time to Complete Processing of Widget*窗格显示Mule通过cluster-demo-app中的流处理一个小部件所花费的时间（毫秒）。数据表明最大处理时间，平均处理时间和最小处理时间，以及用于说明均值偏差的标准偏差。

*  *All Flows*显示了Mule在群集中处理的所有流量的度量标准，而不管其用于处理流量的服务器。
*  *On only one server*说明了Mule只使用一台服务器（`server 1`或`server 2`）处理的流量指标。
*  *On more than one server*说明了Mule使用群集中多个服务器（在本例中是两台服务器）处理的流量的度量标准。


[cols="2*",frame=none,grid=none]
|===
| > | link:/mule-user-guide/v/3.3/5-witnessing-failover[下一步：见证故障转移>>]
|===
