mule-user-guide/v/3.6/4-applying-load-to-the-cluster.adoc
= 将加载应用于群集
:keywords: clusters, deploy

通过在Mule集群上运行的功能性应用程序，我们可以向应用程序发送调用以应用加载并查看集群工作来管理它。使用*WidgetUI* Web应用程序向**cluster-demo-app**发送呼叫，然后见证群集的活动。

. 打开浏览器的新选项卡或窗口，然后转到`+http://localhost:8080/widgetUI/+`（请参阅下图）。请注意，在启动时，由于cluster-demo-app尚未处理任何请求，因此没有任何窗格包含数据。
+
image:widgetUI_home.png[widgetUI_home]

*  *Application Flows*窗格显示cluster-demo-app中的四个流程的图形视图：+
**  `Input`
**  `ShapeService`
**  `ColorService`
**  `IdentificationService`。
+
image:application_flows.png[application_flows]
+
*  *Throughput*窗格显示Mule群集每秒处理的消息的平均数量。
+
image:before_throughput.png[before_throughput]
+
[NOTE]
*Throughput*窗格不会显示`Input`流的数据，因为它不处理消息;它只会将消息从JMS队列移动到VM队列。
+
*  *Amount of flows executed by server*窗格显示集群中每台服务器完成处理应用程序中四个流之一的次数。
+
image:before_amountofFlows.png[before_amountofFlows]
+
*  *Flow Analysis*窗格显示一台服务器上的消息数量（本例中为小部件），集群演示应用程序进程数以及应用程序在集群中多台服务器上处理的消息数。
+
image:before_flowAnalysis.png[before_flowAnalysis]
+
*  *Time to Complete Processing of Widget*窗格显示：
**  Mule群集在集群演示应用中通过*All Flows*处理一个小部件所需的平均时间
**  Mule使用*only one server*处理一个小部件所需的平均时间。
**  Mule在群集中使用*more than one server*处理一个小部件所需的平均时间。
+
image:before_timeToComplete.png[before_timeToComplete]

. 在*Control Panel*中，在标记为*Number of widgets to send*的字段中，输入一个介于50和100之间的数字，以指示Web应用程序应发送给**cluster-demo-app**的“小部件” 。
+
image:control_panel.png[控制面板]

. 按*enter*，或者点击*>*按钮向应用程序发送呼叫。集群演示应用程序开始处理Mule服务器集群上的小部件。 WidgetUI上的窗格动态显示关于Mule集群如何处理流中的消息的数据。当cluster-demo-app完成请求（即处理所有小部件）时，窗格的信息将变为静态。

. 在WidgetUI中，单击*Reset All*重置用户界面中的统计信息。 （重置不会删除Web应用程序发送到群集演示应用程序的所有消息，它只会重置Web应用程序上的统计信息。）

. 重复上面的步骤2  -  3，发送更多调用到cluster-demo-app来处理不同数量的小部件。

== 分析数据

以下详细描述了由于处理了50个小部件的请求而导致的群集活动。

=== 吞吐量

显示Mule群集每秒处理的消息的平均数量，*Throughput*窗格指示：

{} *  Mule通过cluster-demo-app中的所有四个流，每秒平均处理9.93条消息（即小部件）
*  `ShapeService`，`ColorService`和`IdentificationService`流分别平均每秒处理10.25，8.78，7.17个消息。
+
深蓝色条表示平均吞吐量;浅蓝色条显示瞬时吞吐量。
+
image:after_throughput.png[after_throughput]

=== 服务器执行的流量

该窗格演示Mule如何平衡集群中服务器之间的处理负载。数据表明：

*  `server 1`执行了73个流程
*  `server 2`执行了77个流程

该窗格说明Mule如何在服务器之间来回传递消息以完成处理。该图表显示每台服务器处理的流量大致相同，说明Mule有效平衡节点间负载的能力。

image:after_amountofFlows.png[after_amountofFlows]

=== 流量分析

该窗格说明Mule在集群中多次使用多台服务器来处理消息的频率。数据表明：

*  Mule仅使用集群中的一台服务器处理10条消息
*  Mule使用集群中的两台服务器处理40条消息

群集上运行的集群演示应用有利于多节点消息处理，以便更好地演示节点之间的负载均衡。

image:after_flowAnalysis.png[after_flowAnalysis]

=== 完成Widget处理的时间

*Time to Complete Processing of Widget*窗格显示Mule通过cluster-demo-app中的流处理一个小部件所花费的时间（毫秒）。数据表明最大处理时间，平均处理时间和最小处理时间，以及用于说明均值偏差的标准偏差。

*  *All Flows*显示了Mule在群集中处理的所有流量的度量标准，而不管其用于处理流量的服务器。
*  *On only one server*说明了Mule只使用一台服务器（`server 1`或`server 2`）处理的流量指标。
*  *On more than one server*说明了Mule使用群集中多个服务器（在本例中是两台服务器）处理的流量的度量标准。
+
image:after_TimetoProcess3.png[after_TimetoProcess3]
